added and fixed tests