@@ -18,36 +18,30 @@ import static org.junit.jupiter.api.Assertions.*;
 class ParcelTest {
 
     private Parcel parcel;
-    private List<PackageItem> sampleItems;
 
     /**
-     * Creates a fully populated {@link Parcel} before each test.
+     * Creates a fresh {@link Parcel} before each test.
      */
     @BeforeEach
     void setUp() {
-        sampleItems = Arrays.asList(
-                new PackageItem(1, "Book", 0.4f, false, 'B'),
-                new PackageItem(2, "Pen",  0.05f, false, 'S')
-        );
-        parcel = new Parcel(1, "TRK-001-LT", "Jonas Jonaitis",
-                "Gedimino pr. 1, Vilnius", 0.45f, false, 'S', sampleItems);
+        parcel = new Parcel("TRK-001-LT", "Jonas Jonaitis",
+                "Gedimino pr. 1, Vilnius", 2.3f, false, 'E');
+        parcel.setId(1);
     }
 
     @Test
     @DisplayName("Constructor sets all fields correctly")
     void testConstructorSetsFields() {
-        assertEquals(1,                    parcel.getId());
-        assertEquals("TRK-001-LT",         parcel.getTrackingNumber());
-        assertEquals("Jonas Jonaitis",     parcel.getRecipientName());
-        assertEquals("Gedimino pr. 1, Vilnius", parcel.getDeliveryAddress());
-        assertEquals(0.45f,                parcel.getTotalWeightKg(), 0.001f);
-        assertFalse(                       parcel.isDelivered());
-        assertEquals('S',                  parcel.getPriorityClass());
-        assertEquals(2,                    parcel.getItems().size());
+        assertEquals("TRK-001-LT",              parcel.getTrackingNumber());
+        assertEquals("Jonas Jonaitis",           parcel.getRecipientName());
+        assertEquals("Gedimino pr. 1, Vilnius",  parcel.getDeliveryAddress());
+        assertEquals(2.3f, parcel.getTotalWeightKg(), 0.001f);
+        assertFalse(parcel.isDelivered());
+        assertEquals('E', parcel.getPriorityClass());
     }
 
     @Test
-    @DisplayName("Default constructor initialises items to empty list")
+    @DisplayName("Default constructor creates parcel with empty items list")
     void testDefaultConstructorItemsNotNull() {
         Parcel empty = new Parcel();
         assertNotNull(empty.getItems());
@@ -55,15 +49,7 @@ class ParcelTest {
     }
 
     @Test
-    @DisplayName("Constructor with null items initialises empty list")
-    void testNullItemsBecomesEmptyList() {
-        Parcel p = new Parcel(2, "TRK-002", "X", "Y", 1.0f, false, 'E', null);
-        assertNotNull(p.getItems());
-        assertTrue(p.getItems().isEmpty());
-    }
-
-    @Test
-    @DisplayName("Setters update fields correctly")
+    @DisplayName("Setters update all fields correctly")
     void testSetters() {
         parcel.setId(5);
         parcel.setTrackingNumber("TRK-NEW");
@@ -71,24 +57,35 @@ class ParcelTest {
         parcel.setDeliveryAddress("Laisves al. 10");
         parcel.setTotalWeightKg(3.0f);
         parcel.setDelivered(true);
-        parcel.setPriorityClass('E');
+        parcel.setPriorityClass('S');
 
-        assertEquals(5,              parcel.getId());
-        assertEquals("TRK-NEW",     parcel.getTrackingNumber());
-        assertEquals("Petras",      parcel.getRecipientName());
+        assertEquals(5,               parcel.getId());
+        assertEquals("TRK-NEW",       parcel.getTrackingNumber());
+        assertEquals("Petras",        parcel.getRecipientName());
         assertEquals("Laisves al. 10", parcel.getDeliveryAddress());
-        assertEquals(3.0f,           parcel.getTotalWeightKg(), 0.001f);
-        assertTrue(                  parcel.isDelivered());
-        assertEquals('E',            parcel.getPriorityClass());
+        assertEquals(3.0f, parcel.getTotalWeightKg(), 0.001f);
+        assertTrue(parcel.isDelivered());
+        assertEquals('S', parcel.getPriorityClass());
     }
 
     @Test
-    @DisplayName("setItems replaces the list")
-    void testSetItems() {
-        List<PackageItem> newItems = List.of(new PackageItem(9, "Mug", 0.3f, true, 'H'));
-        parcel.setItems(newItems);
-        assertEquals(1, parcel.getItems().size());
-        assertEquals("Mug", parcel.getItems().get(0).getName());
+    @DisplayName("setItems links each item back to this parcel")
+    void testSetItemsLinksParcel() {
+        PackageItem laptop = new PackageItem("Laptop", 2.1f, true,  'E');
+        PackageItem mouse  = new PackageItem("Mouse",  0.2f, false, 'E');
+        parcel.setItems(Arrays.asList(laptop, mouse));
+
+        assertEquals(2, parcel.getItems().size());
+        parcel.getItems().forEach(item ->
+                assertEquals(parcel, item.getParcel()));
+    }
+
+    @Test
+    @DisplayName("setItems with null clears the list")
+    void testSetItemsWithNull() {
+        parcel.setItems(null);
+        assertNotNull(parcel.getItems());
+        assertTrue(parcel.getItems().isEmpty());
     }
 
     @Test
@@ -97,5 +94,15 @@ class ParcelTest {
         String result = parcel.toString();
         assertTrue(result.contains("TRK-001-LT"));
         assertTrue(result.contains("Jonas Jonaitis"));
+        assertTrue(result.contains("false"));
+    }
+
+    @Test
+    @DisplayName("Delivered parcel sets delivered flag to true")
+    void testDeliveredParcel() {
+        Parcel delivered = new Parcel("TRK-002-LT", "Petras",
+                "Kaunas", 1.0f, true, 'S');
+        assertTrue(delivered.isDelivered());
+        assertEquals('S', delivered.getPriorityClass());
     }
 }
